.[2.0.0] - unreleased
[%collapsible]
====
[discrete]
=== Breaking Change

* https://github.com/serpro69/kotlin-faker/pull/274[#274] (core) Add support for language variants extending their base locale
* https://github.com/serpro69/kotlin-faker/pull/259[#259] (core) Replace java.util.Random with kotlin.random.Random
* https://github.com/serpro69/kotlin-faker/pull/246[#246] (extension) Remove KSP from kotest-property extension
* https://github.com/serpro69/kotlin-faker/pull/219[#219] (core) Extract faker's providers into several submodules of their own

[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/issues/131[#131] (core) Add support for using `lang` dict when `lang-COUNTRY` dict is missing (via #274)
* https://github.com/serpro69/kotlin-faker/pull/268[#268] (core) Add randomClassInstance top-level function
* https://github.com/serpro69/kotlin-faker/pull/267[#267] (core) Add support for sealed classes in randomClassInstance
* https://github.com/serpro69/kotlin-faker/pull/266[#266] (core) Add support for internal constructors in randomClassInstance
* https://github.com/serpro69/kotlin-faker/pull/260[#260] (core) Add config strategy for default values of RandomClass instances
* https://github.com/serpro69/kotlin-faker/pull/258[#258] (core) Add RandomClassProvider::randomClassInstance fun with KClass input
* https://github.com/serpro69/kotlin-faker/pull/254[#254] (faker) Add Pictures faker
* https://github.com/serpro69/kotlin-faker/pull/245[#245] (extension) Add extension for testing with BLNS
* https://github.com/serpro69/kotlin-faker/pull/243[#243] (core) Add collection element and map k/v type gen for random class instance
* https://github.com/serpro69/kotlin-faker/pull/234[#234] (extension) Add extension module for kotest property testing
* https://github.com/serpro69/kotlin-faker/pull/232[#232] (core) Add support for alternative primary key when resolving values